<resources>
    <string name="app_name">Verification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="step_1_registration">Step 1. Registration</string>
    <string name="enter_email_adress">Enter email adress</string>
    <string name="send_code">Send Code</string>
    <string name="enter_here">Enter here</string>
    <string name="step_2_email_verification">Step 2. Email verification</string>
    <string name="ContinueButton">Continue</string>
    <string name="repeat_password">Repeat password</string>
    <string name="set_a_password">Set a password</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="complete">Complete</string>

</resources>