<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationFragment">


    <TextView
        android:id="@+id/registrationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_1_registration"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#111111"
        >

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        app:boxBackgroundColor="#F5F5F5"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationId"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_adress"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#777777"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendCodeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#111111"
        android:text="@string/send_code"
        android:paddingTop="12dp"
        android:paddingRight="24dp"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

    </com.google.android.material.button.MaterialButton>





</androidx.constraintlayout.widget.ConstraintLayout>