<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegistrationFragment">


    <TextView
        android:id="@+id/emailVerif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Step 4. Main Information"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#111111"
        >

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        app:boxBackgroundColor="#F5F5F5"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailVerif"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#777777"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surnameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="#F5F5F5"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintWidth_percent="0.85">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_surname"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#777777"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/genderInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="#F5F5F5"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeWidth="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:endIconDrawable="@drawable/ic_nextarrow"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surnameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/genderEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/gender"
            android:inputType="none"

            android:padding="15dp"
            android:textColor="#777777"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#111111"
        android:paddingTop="12dp"
        android:paddingRight="24dp"
        android:paddingBottom="12dp"
        android:paddingLeft="24dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:text="Continue"
        android:layout_marginStart="20dp">

    </com.google.android.material.button.MaterialButton>





</androidx.constraintlayout.widget.ConstraintLayout>